<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/ABSButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/ABS"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/back"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bicepsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/arms"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/chestButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/chest"
            android:textSize="18sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/legsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/legs"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shouldersButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/shoulders"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>