<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/inclineBenchSitupButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/incline_bench_situp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hangingLegRaises"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/hanging_leg_raises"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/crunchesButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/crunches"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/legRaisesButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/leg_raises"
            android:textSize="18sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/supermanButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/superman"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>