<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/chinUpsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/chin_ups"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deadliftsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/dead_lifts"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/latPullDownsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/lat_pull_downs"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/seatedRowsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/seated_rows"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/oneArmDumbbelRowsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/one_arm_dumbbell_rows"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>