<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.group7.jhealth.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <action
        android:id="@+id/action_global_navigate_to_home_fragment"
        app:destination="@id/nav_home" />

    <fragment
        android:id="@+id/nav_diet_monitoring"
        android:name="com.group7.jhealth.fragments.DietMonitoringFragment"
        android:label="@string/menu_diet_monitoring"
        tools:layout="@layout/fragment_diet_monitoring" >
        <action
            android:id="@+id/action_nav_diet_monitoring_to_nav_record_entry"
            app:destination="@id/nav_record_entry" />
        <action
            android:id="@+id/action_nav_diet_monitoring_to_nav_healthy_recipe"
            app:destination="@id/nav_healthy_recipe" />
        <action
            android:id="@+id/action_nav_diet_monitoring_to_nav_calorie_counter"
            app:destination="@id/nav_calorie_counter" />
    </fragment>
    <action
        android:id="@+id/action_global_navigate_to_diet_monitoring_fragment"
        app:destination="@id/nav_diet_monitoring" />
    <fragment
        android:id="@+id/nav_healthy_recipe1"
        android:name="com.group7.jhealth.fragments.HealthyRecipeFood1Fragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_healthy_recipe_food1" />
    <fragment
        android:id="@+id/nav_healthy_recipe2"
        android:name="com.group7.jhealth.fragments.HealthyRecipeFood2Fragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_healthy_recipe_food2" />
    <fragment
        android:id="@+id/nav_sleep_monitoring"
        android:name="com.group7.jhealth.fragments.SleepMonitoringFragment"
        android:label="@string/menu_sleep_monitoring"
        tools:layout="@layout/fragment_sleep_monitoring" />
    <action
        android:id="@+id/action_global_navigate_to_sleep_monitoring_fragment"
        app:destination="@id/nav_sleep_monitoring" />

    <fragment
        android:id="@+id/nav_water_tracker"
        android:name="com.group7.jhealth.fragments.WaterTrackerFragment"
        android:label="@string/menu_water_tracker"
        tools:layout="@layout/fragment_water_intake" />
    <action
        android:id="@+id/action_global_navigate_to_water_tracker_fragment"
        app:destination="@id/nav_water_tracker" />

    <fragment
        android:id="@+id/nav_workout_plan"
        android:name="com.group7.jhealth.fragments.WorkoutPlanFragment"
        android:label="@string/workout_plan"
        tools:layout="@layout/fragment_workout_plan">
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_abs_frag"
            app:destination="@id/nav_abs_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_back_frag"
            app:destination="@id/nav_back_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_biceps_frag"
            app:destination="@id/nav_biceps_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_chest_frag"
            app:destination="@id/nav_chest_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_leg_frag"
            app:destination="@id/nav_leg_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_shoulder_frag"
            app:destination="@id/nav_shoulder_frag" />
    </fragment>
    <action
        android:id="@+id/action_global_navigate_to_workout_plan_fragment"
        app:destination="@id/nav_workout_plan" />

    <fragment
        android:id="@+id/nav_login_form"
        android:name="com.group7.jhealth.fragments.LoginFormFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_login_form" />
    <action
        android:id="@+id/action_global_navigate_to_login_form_fragment"
        app:destination="@id/nav_login_form" />

    <fragment
        android:id="@+id/nav_record_entry"
        android:name="com.group7.jhealth.fragments.RecordEntryFragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_record_entry" />

    <fragment
        android:id="@+id/nav_calorie_counter"
        android:name="com.group7.jhealth.fragments.CalorieCounterFragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_calorie_counter" />
    <fragment
        android:id="@+id/nav_healthy_recipe"
        android:name="com.group7.jhealth.fragments.HealthyRecipesFragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_healthy_recipes" >
        <action
            android:id="@+id/action_nav_healthy_recipe_to_nav_healthy_recipe2"
            app:destination="@id/nav_healthy_recipe2"/>
        <action
            android:id="@+id/action_nav_healthy_recipe_to_nav_healthy_recipe1"
            app:destination="@id/nav_healthy_recipe1" />
    </fragment>
    <fragment
        android:id="@+id/nav_abs_frag"
        android:name="com.group7.jhealth.fragments.ABSFragment"
        android:label="@string/ABS"
        tools:layout="@layout/fragment_abs" >
        <action
            android:id="@+id/action_nav_abs_frag_to_nav_workout_detail_frag"
            app:destination="@id/nav_workout_detail_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_back_frag"
        android:name="com.group7.jhealth.fragments.BackFragment"
        android:label="@string/back"
        tools:layout="@layout/fragment_back" >
        <action
            android:id="@+id/action_nav_back_frag_to_nav_workout_detail_frag"
            app:destination="@id/nav_workout_detail_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_biceps_frag"
        android:name="com.group7.jhealth.fragments.BicepsFragment"
        android:label="@string/arms"
        tools:layout="@layout/fragment_biceps" >
        <action
            android:id="@+id/action_nav_biceps_frag_to_nav_workout_detail_frag"
            app:destination="@id/nav_workout_detail_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_chest_frag"
        android:name="com.group7.jhealth.fragments.ChestFragment"
        android:label="@string/chest"
        tools:layout="@layout/fragment_chest" >
        <action
            android:id="@+id/action_nav_chest_frag_to_nav_workout_detail_frag"
            app:destination="@id/nav_workout_detail_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_leg_frag"
        android:name="com.group7.jhealth.fragments.LegFragment"
        android:label="@string/legs"
        tools:layout="@layout/fragment_leg" >
        <action
            android:id="@+id/action_nav_leg_frag_to_nav_workout_detail_frag"
            app:destination="@id/nav_workout_detail_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_shoulder_frag"
        android:name="com.group7.jhealth.fragments.ShoulderFragment"
        android:label="@string/shoulders"
        tools:layout="@layout/fragment_shoulder" >
        <action
            android:id="@+id/action_nav_shoulder_frag_to_nav_workout_detail_frag"
            app:destination="@id/nav_workout_detail_frag" />
    </fragment>

    <fragment
        android:id="@+id/nav_workout_detail_frag"
        android:name="com.group7.jhealth.fragments.WorkoutDetail"
        tools:layout="@layout/fragment_workout_detail" />

    <fragment
        android:id="@+id/nav_stats_frag"
        android:name="com.group7.jhealth.fragments.StatsFragment"
        tools:layout="@layout/fragment_stats" />
    <action
        android:id="@+id/action_global_navigate_to_stats_fragment"
        app:destination="@id/nav_stats_frag"/>

</navigation>